--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div>exo 1</div><br>
         <a :href="link">{{ message }}</a>
         <div>exo 2</div><br>
-        <div class="ui success message" v-if="success">
+        <div class="ui success message" :class="{success:success, error: !success}" v-if="success">
             <i class="close icon" @click="close"></i>
             <p>Bravo votre enregistrement à marché</p>
         </div>
@@ -34,6 +34,8 @@
         <ul>
             <li v-for="person in persons">{{ person }}</li>
         </ul>
+        <div>exo 4</div><br>
+        <input type="text" v-model="message">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="js/app.js"></script>
