--- a/exo2.html
+++ b/exo2.html
@@ -18,11 +18,10 @@
     </div>
 
     <div class="ui main container" id="app">
-        <p>
-            Prénom : {{ firstname }} <br>
-            Nom : {{ lastname }} <br>
-            Nom complet : <input type="text" v-model="fullname">
-        </p>
+        <input type="text" v-model.lazy="message">
+        {{ message }}
+        <input type="text" @keyup.space="demo">
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
@@ -30,19 +29,14 @@
         var vm = new Vue({
             el: '#app',
             data: {
-              firstname : 'Mohamed',
-              lastname : 'DeCorot',
+              message : 'Mohamed',
             },
-            computed: {
-                fullname: {
-                    get: function () {
-                        return this.firstname + ' ' + this.lastname
-                    },
-                    set: function (value){
-                        let parts = value.split('')
-                        this.firstname = parts [0]
-                        this.lastname = parts [1]
-                    }
+            methods: {
+                demo: function () {
+                    console.log('demo')
+                },
+                demo2: function () {
+                    console.log('demo2')
                 }
             }
         })
