--- a/exo3.html
+++ b/exo3.html
@@ -18,38 +18,51 @@
     </div>
 
     <div class="ui main container" id="app">
-        <input type="text" v-salut.a.b.c="message">
-        <input type="text" v-model="message">
-        {{ message }}
+        <message type="error" :message="message"></message>
+        <counter></counter>
+        <counter :start="3"></counter>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script>
-        Vue.directive('salut', {
-            bind: function (el, binding, vnode) {
-                console.log(el, binding)
-                el.value = binding.value
-                console.log('bind')
+        var message = {
+            props: {
+                type: {type: String, default: 'success'},
+                message: String
             },
-            update: function (el, binding, vnode, oldvnode) {
-                console.log('update')
-            }
+            template: `<div class="ui message" :class="type">{{message}}</div>`
+        }
 
-        })
-        var vm = new Vue({
-            el: '#app',
-            data: {
-              message : 'Mohamed',
+        var counter = {
+            data: function () {
+                return {
+                    count: 0
+                }
+            }, 
+            props: {
+                start: {type: Number, default: 0}
+            },
+            computed: {
+                total: function () {
+                    return this.start + this.count
+                }
             },
             methods: {
-                demo: function () {
-                    console.log('demo')
-                },
-                demo2: function () {
-                    console.log('demo2')
+                increment: function () {
+                    this.count ++
                 }
-            }
+            },
+            template: `<button @click="increment">{{ total }}</button>`
+        }
+
+        var vm = new Vue({
+            el: '#app',
+            components: {message, counter},
+            data: {
+              message : 'Mohamed'
+            } 
         })
     </script>
 </body>
 </html>
+
