--- a/simple/index.html
+++ b/simple/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <div id="app"></div>
+    <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+  <script src="dist/build.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
